Remove all big numbers and sci notation adjust code to max out at quadrillion and overflow Just needs to have negative numbers fixed and dec tested Might need a little more cleanup but otherwise functional

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,8 +39,8 @@ body {
 
 #history {
     color: rgb(180, 180, 180);
-    margin: 5px 10px 15px;
-    font-size: 16px;
+    margin: 5px 0px 15px;
+    font-size: 15px;
 }
 
 #display {
@@ -76,17 +76,6 @@ button {
     font-weight: bolder;
     font-size: 30px;
     text-align: center;
-}
-
-.debug {
-    background-color: black;
-    color: green;
-    width: 1000px;
-    height: 350px;
-}
-
-span {
-    color: white;
 }
 
 .story {
